# esp32_climate_station

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  calibration.txt  format_all.sh  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  bme280_defs.h  bme680.c  bme680.h  bme_user.c  bme_user.h  esp32_climate_station.c  esp32_climate_station.h  uart.c
old_bme280_repo/: pc_server.py
old_bme280_repo/arduino/bme280_example/: bme280_example.ino
src/: CMakeLists.txt  bme280.c  bme280.h  bme680_defs.h  bme_user.c  bme_user.h  main.c  main.h  spi.c  spi.h  uart.c  uart.h
